added images for first 2 projects

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 										<header>
 											<h1>Hi, I’m Abhinav<br />
 											Pandey</h1>
-											<p>Data Professional | Machine Learning Engineer | Entrepreneur</p>
+											<p>Data Professional | Machine Learning Engineer | Entrepreneur | Poetry Enthusiast</p>
 										</header>
-										<p>He has over <strong>2 years of experience in Machine Learning, Predictive Analytics, Statistics, Data Visualization, Data Cleaning & Manipulation and Data Mining </strong> having a portfolio of 20+ complete Data Science Projects in Python and R.</p>
-										<p>He completed his specialization in Machine Learning from the Australian National University where he graduated with First Class Honours in his Bachelor's of Advanced Computing (Hons.) degree.</p>
-										<p> He is also a <strong> certified Data Science professional </strong> from the University of Technology Sydney.</p>
-										<p>More recently, he has been assisting and training professionals from diverse career backgrounds at the Institute of Data, Sydney on their journey into the new age of data-driven decision making as trained and certified Data Professionals.</p>
+										<p><strong>He has 2+ years of experience in Machine Learning, Predictive Analytics, Statistics, Data Visualization, Data Cleaning & Manipulation and Data Mining having a portfolio of 20+ complete Data Science Projects in Python and R.</strong></p>
+										<p><strong>He completed his specialization in Machine Learning from the Australian National University where he graduated with First Class Honours in his Bachelor's of Advanced Computing (Hons.) degree.</strong></p>
+										<p><strong> He is also a certified Data Science professional from the University of Technology Sydney, where he completed his Diploma in Data Science and Artificial Intelligence.</strong></p>
+										<p><strong>More recently, he has been assisting and training professionals from diverse career backgrounds at the Institute of Data, Sydney on their journey into the new age of data-driven decision making as trained and certified Data Professionals.</strong></p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="#" class="button big"><span class="icon solid fa-download"></span>View Resume</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -123,20 +123,20 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/copper-alloy-discovery.png" alt="" /></a>
 											<h3>Research Project :</h3>
 											<h3>Copper Alloy Discovery with Machine Learning</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/backtesting-wisdom.jpg" alt="" /></a>
 											<h3>Backtesting Wisdom - The Performance Analysis Engine for Algorithmic Traders</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -144,7 +144,7 @@
 											<h3>Scraping Product Information from Grocery Retailer's website</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -152,7 +152,7 @@
 											<h3>Evolving Deep Learning Model Architecture using Genetic Algorithms</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -160,7 +160,7 @@
 											<h3>EigenFaces - Building a Facial Recognition System from Scratch</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -168,7 +168,23 @@
 											<h3>Sentiment Analysis of Product Reviews from E-Commerce Clothing Store</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">View Project</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Leveraging Unspervised Clustering for Identifying Traffic Mortality Trends in USA</h3>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<ul class="actions">
+												<li><a href="#" class="button">View Project</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Extracting the Hottest Topics in Artificial Intelligence from 10,000 Research Papers</h3>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<ul class="actions">
+												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 									</div>
