--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/copper-alloy-discovery.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/copper-alloy-discovery-resized.png" alt="" /></a>
 											<h3>Research Project :</h3>
 											<h3>Copper Alloy Discovery with Machine Learning</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
@@ -132,7 +132,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/backtesting-wisdom.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/backtesting-wisdom-resized.jpg" alt="" /></a>
 											<h3>Backtesting Wisdom - The Performance Analysis Engine for Algorithmic Traders</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -140,7 +140,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/grocery-scraping.jpg" alt="" /></a>
 											<h3>Scraping Product Information from Grocery Retailer's website</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -148,8 +148,8 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Evolving Deep Learning Model Architecture using Genetic Algorithms</h3>
+											<a href="#" class="image"><img src="images/evolutionary-algorithms.jpg" alt="" /></a>
+											<h3>Optimizing Deep Learning Model Architecture using Evolutionary Algorithms</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
