added topics to projects

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Personal Portfolio - Abhinav</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="images/favicon.ico" />
 	</head>
 	<body class="is-preload">
 
@@ -127,6 +128,15 @@
 											<h3>Research Project :</h3>
 											<h3>Copper Alloy Discovery with Machine Learning</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - 
+												<ul>
+													<li>Web Scraping</li>
+													<li>Predictive Modelling</li>
+													<li>Model Optimization</li>
+													<li>Python</li>
+													<li>Scikit-Learn</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
@@ -135,6 +145,16 @@
 											<a href="#" class="image"><img src="images/backtesting-wisdom-resized.jpg" alt="" /></a>
 											<h3>Backtesting Wisdom - The Performance Analysis Engine for Algorithmic Traders</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - </br>
+												<ul>
+													<li>Cloud Application Deployment on Heroku</li>
+													<li>Database Setup and Deployment on Postgresql Server</li>
+													<li>File Storage on AWS S3</li>
+													<li>Backend with Python Flask</li>
+													<li>Frontend with HTML, CSS & Bootstrap</li>
+													<li>User Handling (Authentication and Security)</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
@@ -143,6 +163,14 @@
 											<a href="#" class="image"><img src="images/grocery-scraping.jpg" alt="" /></a>
 											<h3>Scraping Product Information from Grocery Retailer's website</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - </br>
+												<ul>
+													<li>HTML Parsing with BeautifulSoup</li>
+													<li>Data Structuring with Pandas</li>
+													<li>Market Simulations and Analysis with Python</li>
+													<li>Visualizations with Seaborn and Matplotlib</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
@@ -151,38 +179,75 @@
 											<a href="#" class="image"><img src="images/evolutionary-algorithms.jpg" alt="" /></a>
 											<h3>Optimizing Deep Learning Model Architecture using Evolutionary Algorithms</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - </br>
+												<ul>
+													<li>HTML Parsing with BeautifulSoup</li>
+													<li>Data Structuring with Pandas</li>
+													<li>Market Simulations and Analysis with Python</li>
+													<li>Visualizations with Seaborn and Matplotlib</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/eigenfaces-facial-recognition.png" alt="" /></a>
 											<h3>EigenFaces - Building a Facial Recognition System from Scratch</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - </br>
+												<ul>
+													<li>Singular Value Decomposition</li>
+													<li>Eigenvectors and Eigenvalues using PCA</li>
+													<li>Visualizations with Matplotlib</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/ecommerce-sentiment-analysis.jpg" alt="" /></a>
 											<h3>Sentiment Analysis of Product Reviews from E-Commerce Clothing Store</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - </br>
+												<ul>
+													<li>State of the Art Pre-trained Sentiment Classification Neural Network - Flair</li>
+													<li>Text Preprocessing with NLTK</li>
+													<li>KMeans and Heirarchical Clustering</li>
+													<li>Data Manipulation and reshaping with Pandas</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/traffic-mortality.jpg" alt="" /></a>
 											<h3>Leveraging Unspervised Clustering for Identifying Traffic Mortality Trends in USA</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - </br>
+												<ul>
+													<li>Exploratory Data Analaysis</li>
+													<li>Kmeans Clustering</li>
+													<li>Result Analysis with Pandas</li>
+													<li>Data Visualization with Matplotlib</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/ai-hot-topics.png" alt="" /></a>
 											<h3>Extracting the Hottest Topics in Artificial Intelligence from 10,000 Research Papers</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p><strong>Includes</strong> - </br>
+												<ul>
+													<li>Topic Extraction using Latent Dirichlet Allocation</li>
+													<li>Natural Language Processing using NLTK</li>
+												</ul>
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">View Project</a></li>
 											</ul>
