--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/profile-pic.jpg" alt="" />
+										<img src="images/profile-pic-edited.jpg" alt="" />
 									</span>
 								</section>
 
@@ -138,7 +138,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Copper%20Alloy%20Discovery%20using%20AI" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -156,7 +156,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="#" class="button" onclick="return false;">Confidential</a></li>
 											</ul>
 										</article>
 										<article>
@@ -172,7 +172,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Ajijo" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -188,7 +188,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Neural%20Network%20Optimization%20with%20Evolutionary%20Algorithms" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -203,7 +203,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/CLAB%20Assignments/CLAB%202" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -214,12 +214,13 @@
 												<ul>
 													<li>State of the Art Pre-trained Sentiment Classification Neural Network - Flair</li>
 													<li>Text Preprocessing with NLTK</li>
+													<li>Creative Feature Engineering</li>
 													<li>KMeans and Heirarchical Clustering</li>
 													<li>Data Manipulation and reshaping with Pandas</li>
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/E-Commerce%20Women's%20Clothing" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -235,7 +236,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Traffic%20Mortality%20Analysis" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
@@ -249,7 +250,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/PythonDataScienceProjects/tree/master/NLP/The%20Hottest%20Topics%20in%20Machine%20Learning" class="button">View Project</a></li>
 											</ul>
 										</article>
 									</div>
