--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/copper-alloy-discovery-resized.png" alt="" /></a>
 											<h3>Research Project :</h3>
-											<h3>Copper Alloy Discovery with Machine Learning</h3>
+											<h3>Machine Learning Assisted Discovery of High Performing Copper Alloys</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<p><strong>Includes</strong> - 
 												<ul>
