Update index.html copper alloy tile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Personal Portfolio - Abhinav</title>
+		<title>Personal Portfolio - Abhinav Pandey</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,8 +35,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Abhinav<br />
-											Pandey</h1>
+											<h1>Welcome to Abhinav's </br>Project Portfolio!</h1>
 											<p>Data Professional | Machine Learning Engineer | Entrepreneur | Poetry Enthusiast</p>
 										</header>
 										<p><strong>He has 2+ years of experience in Machine Learning, Predictive Analytics, Statistics, Data Visualization, Data Cleaning & Manipulation and Data Mining having a portfolio of 20+ complete Data Science Projects in Python and R.</strong></p>
@@ -127,7 +126,9 @@
 											<a href="#" class="image"><img src="images/copper-alloy-discovery-resized.png" alt="" /></a>
 											<h3>Research Project :</h3>
 											<h3>Copper Alloy Discovery using Machine Learning</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>Until recently, the process of discovering new alloys has relied largely on a combination of trial and error, expert judgment, and intuition. As a result, the discovery process is slow and expensive.</p>
+											<p>In this collaborative project, we propose a cheap, fast and reliable <strong>Smart Alloy Generation System</strong> that utilizes machine learning to obtain multi-element alloy compositions and processing conditions with user-specified property parameters.</p>
+											
 											<p><strong>Includes</strong> - 
 												<ul>
 													<li>Web Scraping</li>
@@ -138,7 +139,8 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Copper%20Alloy%20Discovery%20using%20AI" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Copper%20Alloy%20Discovery%20using%20AI" class="button">View GitHub</a></li>
+												<li><a href="#" class="button" onclick="return false;">View Demo! (Coming Soon)</a></li>											
 											</ul>
 										</article>
 										<article>
