update index.html botprofits project

--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
 										<article>
 											<a href="#" class="image"><img src="images/backtesting-wisdom-resized.jpg" alt="" /></a>
 											<h3>Backtesting Wisdom - The Performance Analysis Engine for Algorithmic Traders</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+
+
+											<p><i>Automating the backtest performance analysis using data science and web development best practices.</i></p>
+											<p>Algorithmic trading uses a computer program that follows a defined set of instructions to place a trade. In practice, traders backtest their trading bots on historical prices to estimate their potential future returns. </p>
+											<p>Unfortunately, there are hundreds of different combinations to backtest. Proprietary software, such as MetaTrader, can perform these backtests and return the performance results for these combinations individually. However, it can take up to weeks to reliably estimate the HOLISTIC picture of a strategy's performance.</p>
+											<p>This project aims to reduce the amount of time traders spend on testing strategies.</p>
 											<p><strong>Includes</strong> - </br>
 												<ul>
 													<li>Cloud Application Deployment on Heroku</li>
