--- a/index.html
+++ b/index.html
@@ -270,15 +270,15 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
+							<!-- Search
 								<section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
-								<nav id="menu">
+								<!-- <nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
@@ -310,25 +310,29 @@
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<h2>When I'm not working ...</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/dance.gif" alt="" /></a>
+											<p><strong>Dance!</strong></p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/theatre01.jpg" alt="" /></a>
+											<p><strong>Theatre!</strong></p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/poem01.gif" alt="" /></a>
+											<p><strong>Poetry!</strong></p>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/embarassing01.gif" alt="" /></a>
+											<p><strong>And Embarrassing Stuff ...</strong></p>
 										</article>
 									</div>
 									<ul class="actions">
@@ -341,7 +345,6 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">abhinav_pandey29@yahoo.com</a></li>
 										<li class="icon solid fa-phone">(+61) 4523-29978</li>
@@ -351,7 +354,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; DS Portfolio by Abhinav Pandey. All rights reserved. Design Template: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
