--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/CLAB%20Assignments/CLAB%202" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Face%20Recognition%20using%20EigenFaces" class="button">View GitHub</a></li>
 											</ul>
 										</article>
 										<article>
