--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/grocery-scraping.jpg" alt="" /></a>
 											<h3>Scraping Product Information from Grocery Retailer's website</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>This project was done as part of my final year Computer Vision course at the Australian National University.</p>
+											<p>Eigenfaces refers to an appearance-based approach to face recognition that seeks to capture the variation in a collection of face images and using the captured information to encode and compare images of individual faces.</p>	
 											<p><strong>Includes</strong> - </br>
 												<ul>
 													<li>HTML Parsing with BeautifulSoup</li>
