Eigenfaces text added

--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/grocery-scraping.jpg" alt="" /></a>
 											<h3>Scraping Product Information from Grocery Retailer's website</h3>
-											<p>This project was done as part of my final year Computer Vision course at the Australian National University.</p>
-											<p>Eigenfaces refers to an appearance-based approach to face recognition that seeks to capture the variation in a collection of face images and using the captured information to encode and compare images of individual faces.</p>	
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<p><strong>Includes</strong> - </br>
 												<ul>
 													<li>HTML Parsing with BeautifulSoup</li>
@@ -202,9 +201,14 @@
 										<article>
 											<a href="#" class="image"><img src="images/eigenfaces-facial-recognition.png" alt="" /></a>
 											<h3>EigenFaces - Building a Facial Recognition System from Scratch</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<i><p>This project was done as part of my final year Computer Vision course at the Australian National University.</p></i>
+											<p><strong>Eigenfaces refers to an appearance-based approach to face recognition</strong> that seeks to capture the variation in a collection of face images and using the captured information to encode and compare images of individual faces.</p>	
+											<p>In this project, I have used Python and images from the YaleFace database to build and test such a system!</p>
+											<p>If you are interested, feel free to refer to the code and the step by step report of the project on GitHub and implement this on your own.  
+											</br>PS - It's really fun!</p>	
 											<p><strong>Includes</strong> - </br>
 												<ul>
+													<li>Python</li>
 													<li>Singular Value Decomposition</li>
 													<li>Eigenvectors and Eigenvalues using PCA</li>
 													<li>Visualizations with Matplotlib</li>
