skimmed extra buttons

--- a/index.html
+++ b/index.html
@@ -335,14 +335,10 @@
 											<a href="#" class="image"><img src="images/poem01.gif" alt="" /></a>
 											<p><strong>Poetry!</strong></p>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/embarassing01.gif" alt="" /></a>
-											<p><strong>And Embarrassing Stuff ...</strong></p>
-										</article>
 									</div>
-									<ul class="actions">
+									<!-- <ul class="actions">
 										<li><a href="#" class="button">More</a></li>
-									</ul>
+									</ul> -->
 								</section>
 
 							<!-- Section -->
