--- a/index.html
+++ b/index.html
@@ -185,7 +185,12 @@
 										<article>
 											<a href="#" class="image"><img src="images/evolutionary-algorithms.jpg" alt="" /></a>
 											<h3>Optimizing Deep Learning Model Architecture using Evolutionary Algorithms</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>In this project we will develop an optimal performing Neural Network by making an Evolutionary Algorithm to modify and optimize the following -
+												<br>1. Number of Hidden Layers
+												<br>2. Number of Neurons in each Hidden Layer
+												<br>3. The Activation Function for each layer
+												<br>4. Learning Rate
+											</p>
 											<p><strong>Includes</strong> - </br>
 												<ul>
 													<li>HTML Parsing with BeautifulSoup</li>
@@ -195,7 +200,7 @@
 												</ul>
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Neural%20Network%20Optimization%20with%20Evolutionary%20Algorithms" class="button">View Project</a></li>
+												<li><a href="https://github.com/abhinav-pandey29/Projects/tree/main/Optimizing%20Deep%20Learning%20Model%20Architecture%20using%20Evolutionary%20Algorithms" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
