--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 											<a href="#" class="image"><img src="images/evolutionary-algorithms.jpg" alt="" /></a>
 											<h3>Optimizing Deep Learning Model Architecture using Evolutionary Algorithms</h3>
 											<p>In this project we will develop an optimal performing Neural Network by making an Evolutionary Algorithm to modify and optimize the following -
-												<br>1. Number of Hidden Layers
+												<br><br>1. Number of Hidden Layers
 												<br>2. Number of Neurons in each Hidden Layer
 												<br>3. The Activation Function for each layer
 												<br>4. Learning Rate
