add coles-scraper project

--- a/index.html
+++ b/index.html
@@ -325,6 +325,23 @@
 										class="button">View Project</a></li>
 							</ul>
 						</article>
+						<article>
+							<a href="#" class="image"><img src="images/grocery-scraping.jpg" alt="" /></a>
+							<h3>Scraping Product Information from Coles' website</h3>
+							<p>This is web scraping library designed to facilitate easy extraction of product details
+								from the Coles website. This project uses Selenium for browser automation, following the
+								Page Object Model pattern to structure the code.</p>
+							<p><strong>Includes</strong> - </br>
+							<ul>
+								<li>Browser automation with Selenium</li>
+								<li>HTML Parsing with BeautifulSoup</li>
+							</ul>
+							</p>
+							<ul class="actions">
+								<li><a href="https://github.com/abhinav-pandey29/coles-scraper" class="button">View
+										Project</a></li>
+							</ul>
+						</article>
 					</div>
 				</section>
 
